# doc-summary-search

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  docdb.sqlite
backend/app/: main.py
backend/app/api/: auth.py  files.py  ocr.py
backend/app/core/: database.py
backend/app/llm/: LLM_summation.py  db_service.py
backend/app/llm/prompts/: db.py
backend/app/model/: file.py  user.py
backend/app/ocr/: db_helper.py
backend/app/ocr/parsers/: docx_parser.py  hwp_parser.py  multi_parser.py  pdf_parser.py  pptx_parser.py  vision_helper.py
backend/app/services/: auth_service.py  file_service.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: AuthForm.tsx  AuthInput.tsx
frontend/src/components/common/: FileStatusButtons.tsx  Sidebar.tsx
frontend/src/components/search/: SearchFileCard.tsx
frontend/src/components/upload/: FileUpload.tsx
frontend/src/hooks/: useFiles.ts
frontend/src/pages/: JoinPage.tsx  LoginPage.tsx  SearchPage.tsx  UploadPage.tsx
frontend/src/store/: index.ts
frontend/src/store/slices/: fileSlice.ts
frontend/src/types/: file.ts
llm/core/: database.py
llm/model/: summary.py
llm/prompts/: __init__.py  api.py  main.py  util.py
ocr/parsers/: docx_parser.py  hwp_parser.py  multi_parser.py  pdf_parser.py  pptx_parser.py  vision_helper.py
