[project]
name = "doc-summary-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "olefile>=0.47",
    "openai>=2.36.0",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "python-pptx>=1.0.2",
    "uvicorn[standard]>=0.46.0",
]
